@@ -1,6 +1,6 @@
 # Standard COUGAAR LDM domains
 
 # The following line is equivalent to specifying
-#   -Dorg.cougaar.domain.alp=org.cougaar.domain.glm.GLMDomain
+#   -Dorg.cougaar.domain.glm=org.cougaar.domain.glm.GLMDomain
 # on the command line:
-alp=org.cougaar.domain.glm.ldm.GLMDomain
+glm=org.cougaar.domain.glm.ldm.GLMDomain
