@@ -144,7 +144,7 @@ public class OrgTPRTDataPlugIn extends SimplePlugIn  {
   */
 
   protected void setupSubscriptions() {
-    aldmf = (GLMFactory)getFactory("alp");
+    aldmf = (GLMFactory)getFactory("glm");
     getSubscriber().setShouldBePersisted(false);
 
     if (!didRehydrate()) {
